# chessboard

./: .gitignore  CMakeLists.txt  LICENSE  README.rst
assets/: chessboard.qrc
assets/figurines/: README.rst
assets/qml/: Board.qml
src/: Board.cpp  Board.hpp  CMakeLists.txt  chessboard.cpp
